--- a/SmartTech/appsettings.json
+++ b/SmartTech/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+  "AppConnection": "Data Source=abdullahi\\sqlexpress;Database=SmartTech;Trusted_Connection=True;MultipleActiveResultSets=True"
+ },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
