--- a/SmartTech/bundleconfig.json
+++ b/SmartTech/bundleconfig.json
@@ -9,6 +9,13 @@
     ]
   },
   {
+    "outputFileName": "wwwroot/css/dashboard.min.css",
+    // An array of relative input file paths. Globbing patterns supported
+    "inputFiles": [
+      "wwwroot/css/dashboard.css"
+    ]
+  },
+  {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
       "wwwroot/js/site.js"
